--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#About me">About me</a></li>
             <li><a href="#Projects">Projects</a></li>
             <li><a href="#Skills">Skills</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#Contact">Contact Me</a></li>
           </ul>
         </div>
       </nav>
