Make changes in Download button
Make changes in Download button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
           <span id="element"></span>
           <div class="buttons">
-            <button class="btn">Download Resume</button>
+              <a href="./Resume_Bhagwan.pdf" download="your-resume.pdf"><button class="btn">Download Resume</button></a>
+              
+            </a>
             <button class="btn2">Github</button>
           </div>
         </div>
