--- a/index.html
+++ b/index.html
@@ -175,38 +175,32 @@
     <!-- FOURTH SECTION START -->
 
 
-    <div id="Projects">
-      <div class="container">
-        <div class="left1">
-          <h3>Web Identity</h3>
-          <h2>Presenting My <span> Blogging Sites</span></h2>
-          <p>
-            Experience the Journey of My Latest Creations</p>
-          <button class="btn">Show More</button>
-        </div>
-        <div class="right1">
-          <section class="secondsection">
-            <span class="text-gray">A Review of My Achievements</span>
-            <h1>Sites</h1>
-
-            <div class="box">
-              <div class="vertical">
-                <img class="image-top" src="./ICONS/site-1.png" />
-                <div class="vertical-title">Interviewtoo.com</div>
-
-              </div>
-
-              <div class="vertical">
-                <img class="image-top" src="./ICONS/sitw-2.jfif" />
-                <div class="vertical-title">Moneymindsjournal.com</div>
-
-              </div>
+    <div class="container">
+      <div class="left1">
+        <h3>Web Identity</h3>
+        <h2>Presenting My <span> Blogging Sites</span></h2>
+        <p>
+          Experience the Journey of My Latest Creations</p>
+        <button id="showmore-btn" class="btn">Show More</button>
+      </div>
+      <div class="right1">
+        <section class="secondsection additional-content">
+          <span class="text-gray">A Review of My Achievements</span>
+          <h1>Sites</h1>
+          <div class="box">
+            <div class="vertical" id="site1">
+              <img class="image-top" src="./ICONS/site-1.png" />
+              <div class="vertical-title">Interviewtoo.com</div>
             </div>
-          </section>
-        </div>
-
+            <div class="vertical" id="site2">
+              <img class="image-top" src="./ICONS/sitw-2.jfif" />
+              <div class="vertical-title">Moneymindsjournal.com</div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
+    
     <hr>
 
 
